New Pages Added

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-<!--							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>-->
+							<li><a href="blogs.html">My Blogs</a></li>
+							<!--<li><a href="elements.html">Elements Reference</a></li>-->
 						</ul> 
 
 
@@ -54,11 +54,11 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="#">Self Introduction</a></h2>
+									<h2><a href="self.html">Self Introduction</a></h2>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Check it out</a></li>
+									<li><a href="self.html" class="button large">Check it out</a></li>
 								</ul>
 							</article>
 
