--- a/self.html
+++ b/self.html
@@ -10,7 +10,7 @@
         <div id="space"></div>
         <div id="main">
             <h1>Self Introduction</h1>
-            <p>My name is Gokul M R. I am a 3rd year student at IIT MAdras. I am pursuing my B.Tech in Mechanical Engineering. I am a passionate programmer and I love to code. I am also a Machine Learning enthusiast and I doing projects in the field of Machine Learning.</p>
+            <p>My name is Gokul M R. I am a 3rd year student at IIT MAdras. I am pursuing my B.Tech in Mechanical Engineering. I am a passionate programmer and I love to code. I am also a Machine Learning enthusiast and I love doing projects in the field of Machine Learning.</p>
         </div>
     </body>
 </html>
